src/snapshots/vm__parser__test__parse_uniary_operations-3.snap
---
source: src/parser.rs
expression: "uniary_operation_expr(\"!(a || b) + c\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 9,
            line: 1,
            fragment: " + c",
            extra: (),
        },
        Ast {
            node: UniaryOp(
                Not,
                Ast {
                    node: Group(
                        Ast {
                            node: BinaryOp(
                                LogicalOr,
                                Ast {
                                    node: Ident(
                                        Ident(
                                            "a",
                                        ),
                                    ),
                                    span: LocatedSpan {
                                        offset: 2,
                                        line: 1,
                                        fragment: "a",
                                        extra: (),
                                    },
                                },
                                Ast {
                                    node: Ident(
                                        Ident(
                                            "b",
                                        ),
                                    ),
                                    span: LocatedSpan {
                                        offset: 7,
                                        line: 1,
                                        fragment: "b",
                                        extra: (),
                                    },
                                },
                            ),
                            span: LocatedSpan {
                                offset: 2,
                                line: 1,
                                fragment: "a || b",
                                extra: (),
                            },
                        },
                    ),
                    span: LocatedSpan {
                        offset: 1,
                        line: 1,
                        fragment: "(a || b)",
                        extra: (),
                    },
                },
            ),
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "!(a || b)",
                extra: (),
            },
        },
    ),
)
