src/snapshots/vm__parser__test__parse_while-2.snap
---
source: src/parser.rs
expression: "while_statement(\"while (a < 10) {}\".into())"
---
Err(
    Error(
        VerboseError {
            errors: [
                (
                    LocatedSpan {
                        offset: 16,
                        line: 1,
                        fragment: "}",
                        extra: (),
                    },
                    Nom(
                        Tag,
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 16,
                        line: 1,
                        fragment: "}",
                        extra: (),
                    },
                    Context(
                        "Keyword",
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 16,
                        line: 1,
                        fragment: "}",
                        extra: (),
                    },
                    Nom(
                        Alt,
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 16,
                        line: 1,
                        fragment: "}",
                        extra: (),
                    },
                    Context(
                        "Controlflow statement",
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 16,
                        line: 1,
                        fragment: "}",
                        extra: (),
                    },
                    Nom(
                        Alt,
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 16,
                        line: 1,
                        fragment: "}",
                        extra: (),
                    },
                    Nom(
                        Many1,
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 14,
                        line: 1,
                        fragment: " {}",
                        extra: (),
                    },
                    Context(
                        "While body",
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "while (a < 10) {}",
                        extra: (),
                    },
                    Context(
                        "While loop",
                    ),
                ),
            ],
        },
    ),
)
